[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "Answers to LeetCode problems"
authors = ["Arnaud Blois <a.blois@ucl.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
pylint-runner = "^0.6.0"
pre-commit = "^2.15.0"
isort = "^5.9.3"
python-lsp-server = {extras = ["all"], version = "^1.2.2"}
pytest-cov = "^3.0.0"
ipython = "^8.0.1"
gitlint = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.ini_options]
disable = ["C0330", "C0326", "R0801"]
max-line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
